test/corpus/expressions.txt
================================================================================
Number Literals
================================================================================

PROGRAM TEST
    int_val = 1
    int_val = 1_SZ1
    int_val = 1_4
    flt_val = 1.0
    flt_val = 1.
    flt_val = .1
    flt_val = 1.0_SZ1
    flt_val = 1._SZ1
    flt_val = 1.E+4
    flt_val = 1.23E+4
    flt_val = 1.23E-4
    flt_val = 1.23E4
    flt_val = 1.0e+5_SZ1
    dbl_val = 1.D+4
    dbl_val = 1.23D+4
    dbl_val = 1.23D-4
    dbl_val = 1.23D4
    dbl_val = 1.23e-4_d
    bin_val = B'1011'
    oct_val = O'0158'
    hex_val = Z'09AF'
    cpx_val = (1.0, 2.0)
    cpx_val = (dbl_val, dbl_val)
    cpx_val = (-1.0, 1.0)
    cpx_val = (1.0, -1.0)
    bool_val = .false._c_bool
END PROGRAM

--------------------------------------------------------------------------------

(translation_unit
  (program
    (program_statement
      (name))
    (assignment_statement
      (identifier)
      (number_literal))
    (assignment_statement
      (identifier)
      (number_literal
        (identifier)))
    (assignment_statement
      (identifier)
      (number_literal
        (number_literal)))
    (assignment_statement
      (identifier)
      (number_literal))
    (assignment_statement
      (identifier)
      (number_literal))
    (assignment_statement
      (identifier)
      (number_literal))
    (assignment_statement
      (identifier)
      (number_literal
        (identifier)))
    (assignment_statement
      (identifier)
      (number_literal
        (identifier)))
    (assignment_statement
      (identifier)
      (number_literal))
    (assignment_statement
      (identifier)
      (number_literal))
    (assignment_statement
      (identifier)
      (number_literal))
    (assignment_statement
      (identifier)
      (number_literal))
    (assignment_statement
      (identifier)
      (number_literal
        (identifier)))
    (assignment_statement
      (identifier)
      (number_literal))
    (assignment_statement
      (identifier)
      (number_literal))
    (assignment_statement
      (identifier)
      (number_literal))
    (assignment_statement
      (identifier)
      (number_literal))
    (assignment_statement
      (identifier)
      (number_literal
        (identifier)))
    (assignment_statement
      (identifier)
      (number_literal))
    (assignment_statement
      (identifier)
      (number_literal))
    (assignment_statement
      (identifier)
      (number_literal))
    (assignment_statement
      (identifier)
      (complex_literal
        (number_literal)
        (number_literal)))
    (assignment_statement
      (identifier)
      (complex_literal
        (identifier)
        (identifier)))
    (assignment_statement
      (identifier)
      (complex_literal
        (unary_expression
          (number_literal))
        (number_literal)))
    (assignment_statement
      (identifier)
      (complex_literal
        (number_literal)
        (unary_expression
          (number_literal))))
    (assignment_statement
      (identifier)
      (boolean_literal
        (identifier)))
    (end_program_statement)))

================================================================================
String Literals
================================================================================

PROGRAM TEST
    sngl_qt = ''
    sngl_qt = '123456789!<>/?@#$%&"\\"//abcdefgh''ABCDEFGH'
    dble_qt = ""
    dble_qt = "123456789!<>/?@#$%&'\\'//abcdefgh""ABCDEFGH"
    dble_qt = """double double quotes"""
    sngl_qt = '''double single quotes'''
    dble_qt = "'single in double quotes'"
    sngl_qt = '"double in single quotes"'
    three_dble_qt = """"""""
    three_sngl_qt = ''''''''

    val = "one"//'two'//sngl_qt//dble_qt

    with_kind = ck_"string with kind"
    with_numeral_kind = 4_"string with kind"
END PROGRAM

--------------------------------------------------------------------------------

(translation_unit
  (program
    (program_statement
      (name))
    (assignment_statement
      left: (identifier)
      right: (string_literal))
    (assignment_statement
      left: (identifier)
      right: (string_literal
        (string_literal_part)
        (string_literal_part)
        (string_literal_part)))
    (assignment_statement
      left: (identifier)
      right: (string_literal))
    (assignment_statement
      left: (identifier)
      right: (string_literal
        (string_literal_part)
        (string_literal_part)
        (string_literal_part)))
    (assignment_statement
      left: (identifier)
      right: (string_literal
        (string_literal_part)
        (string_literal_part)
        (string_literal_part)))
    (assignment_statement
      left: (identifier)
      right: (string_literal
        (string_literal_part)
        (string_literal_part)
        (string_literal_part)))
    (assignment_statement
      left: (identifier)
      right: (string_literal
        (string_literal_part)))
    (assignment_statement
      left: (identifier)
      right: (string_literal
        (string_literal_part)))
    (assignment_statement
      left: (identifier)
      right: (string_literal
        (string_literal_part)
        (string_literal_part)
        (string_literal_part)))
    (assignment_statement
      left: (identifier)
      right: (string_literal
        (string_literal_part)
        (string_literal_part)
        (string_literal_part)))
    (assignment_statement
      left: (identifier)
      right: (concatenation_expression
        left: (string_literal
          (string_literal_part))
        right: (concatenation_expression
          left: (string_literal
            (string_literal_part))
          right: (concatenation_expression
            left: (identifier)
            right: (identifier)))))
    (assignment_statement
      left: (identifier)
      right: (string_literal
        kind: (identifier)
        (string_literal_part)))
    (assignment_statement
      left: (identifier)
      right: (string_literal
        kind: (number_literal)
        (string_literal_part)))
    (end_program_statement)))

================================================================================
String Literal delimiters, escaped quotes and continuation (CST)
:cst
================================================================================

program test
  dble_qt = "abc""def"
  sngl_qt = 'ghi''jkl'
  cont_qt = "mno&
             ! comment
             &pqr"
end program

--------------------------------------------------------------------------------

1:0  - 8:0    translation_unit
1:0  - 8:0      program
1:0  - 2:0        program_statement
1:0  - 1:7          "program"
1:8  - 1:12         name `test`
2:2  - 2:22       assignment_statement
2:2  - 2:9          left: identifier `dble_qt`
2:10 - 2:11         "="
2:12 - 2:22         right: string_literal
2:12 - 2:13           "\""
2:13 - 2:16           string_literal_part `abc`
2:16 - 2:17           "\\"
2:17 - 2:18           string_literal_part `\"`
2:18 - 2:21           string_literal_part `def`
2:21 - 2:22           "\""
3:2  - 3:22       assignment_statement
3:2  - 3:9          left: identifier `sngl_qt`
3:10 - 3:11         "="
3:12 - 3:22         right: string_literal
3:12 - 3:13           "\""
3:13 - 3:16           string_literal_part `ghi`
3:16 - 3:17           "\\"
3:17 - 3:18           string_literal_part `'`
3:18 - 3:21           string_literal_part `jkl`
3:21 - 3:22           "\""
4:2  - 6:18       assignment_statement
4:2  - 4:9          left: identifier `cont_qt`
4:10 - 4:11         "="
4:12 - 6:18         right: string_literal
4:12 - 4:13           "\""
4:13 - 4:16           string_literal_part `mno`
4:16 - 4:17           "&"
5:13 - 5:22           comment `! comment`
6:13 - 6:14           "&"
6:14 - 6:17           string_literal_part `pqr`
6:17 - 6:18           "\""
7:0  - 7:11       end_program_statement
7:0  - 7:3          "end"
7:4  - 7:11         "program"

================================================================================
String Literal blanks at token boundaries (CST)
:cst
================================================================================

program test
  lead_qt = "  abc"
  cont_qt = "abc &
             & def"
  quot_qt = "a"" b"
  blank_qt = "   "
end program

--------------------------------------------------------------------------------

1:0  - 8:0    translation_unit
1:0  - 8:0      program
1:0  - 2:0        program_statement
1:0  - 1:7          "program"
1:8  - 1:12         name `test`
2:2  - 2:19       assignment_statement
2:2  - 2:9          left: identifier `lead_qt`
2:10 - 2:11         "="
2:12 - 2:19         right: string_literal
2:12 - 2:13           "\""
2:13 - 2:18           string_literal_part `  abc`
2:18 - 2:19           "\""
3:2  - 4:19       assignment_statement
3:2  - 3:9          left: identifier `cont_qt`
3:10 - 3:11         "="
3:12 - 4:19         right: string_literal
3:12 - 3:13           "\""
3:13 - 3:17           string_literal_part `abc `
3:17 - 3:18           "&"
4:13 - 4:14           "&"
4:14 - 4:18           string_literal_part ` def`
4:18 - 4:19           "\""
5:2  - 5:19       assignment_statement
5:2  - 5:9          left: identifier `quot_qt`
5:10 - 5:11         "="
5:12 - 5:19         right: string_literal
5:12 - 5:13           "\""
5:13 - 5:14           string_literal_part `a`
5:14 - 5:15           "\\"
5:15 - 5:16           string_literal_part `\"`
5:16 - 5:18           string_literal_part ` b`
5:18 - 5:19           "\""
6:2  - 6:18       assignment_statement
6:2  - 6:10         left: identifier `blank_qt`
6:11 - 6:12         "="
6:13 - 6:18         right: string_literal
6:13 - 6:14           "\""
6:14 - 6:17           string_literal_part `   `
6:17 - 6:18           "\""
7:0  - 7:11       end_program_statement
7:0  - 7:3          "end"
7:4  - 7:11         "program"

================================================================================
Unterminated string literal ends with the line
================================================================================

program test
  x = "abc
  y = 1
  z = "
  w = 2
  print *, "ok"
end program

--------------------------------------------------------------------------------

(translation_unit
  (program
    (program_statement
      (name))
    (assignment_statement
      left: (identifier)
      (ERROR
        (string_literal_part))
      right: (number_literal))
    (assignment_statement
      left: (identifier)
      (ERROR
        (string_literal_part))
      right: (number_literal))
    (print_statement
      (format_identifier)
      (output_item_list
        (string_literal
          (string_literal_part))))
    (end_program_statement)))

================================================================================
Boolean Literals
================================================================================

PROGRAM TEST
    bool_val = .TRUE.
    bool_val = .FALSE.
END PROGRAM

--------------------------------------------------------------------------------

(translation_unit
  (program
    (program_statement
      (name))
    (assignment_statement
      (identifier)
      (boolean_literal))
    (assignment_statement
      (identifier)
      (boolean_literal))
    (end_program_statement)))

================================================================================
Array Literals
================================================================================

program test
  integer :: n(3) = (/ 1, 2, 3  /)
  real(8) :: x(3) = (/2.0**3, REAL(n(1)), SIN(3.1)/)
  real(8) :: z(3) = [-1.0, 0.0, 1.0]
  call append(list, (/ real(1) /))
end program

--------------------------------------------------------------------------------

(translation_unit
  (program
    (program_statement
      (name))
    (variable_declaration
      type: (intrinsic_type)
      declarator: (init_declarator
        left: (sized_declarator
          (identifier)
          (size
            (number_literal)))
        right: (array_literal
          (number_literal)
          (number_literal)
          (number_literal))))
    (variable_declaration
      type: (intrinsic_type
        kind: (kind
          (number_literal)))
      declarator: (init_declarator
        left: (sized_declarator
          (identifier)
          (size
            (number_literal)))
        right: (array_literal
          (math_expression
            left: (number_literal)
            right: (number_literal))
          (call_expression
            (identifier)
            (argument_list
              (call_expression
                (identifier)
                (argument_list
                  (number_literal)))))
          (call_expression
            (identifier)
            (argument_list
              (number_literal))))))
    (variable_declaration
      type: (intrinsic_type
        kind: (kind
          (number_literal)))
      declarator: (init_declarator
        left: (sized_declarator
          (identifier)
          (size
            (number_literal)))
        right: (array_literal
          (unary_expression
            argument: (number_literal))
          (number_literal)
          (number_literal))))
    (subroutine_call
      subroutine: (identifier)
      (argument_list
        (identifier)
        (array_literal
          (call_expression
            (identifier)
            (argument_list
              (number_literal))))))
    (end_program_statement)))

================================================================================
Array Slicing
================================================================================

PROGRAM TEST
    arr(1) = 1
    arr(:) = 2
    arr(1:10) = 3
    arr(1:10:2) = 4
    arr(::2) = 5
    arr(INT(x):3*j:j) = 6
    arr(1, j, INT(SIN(r))) = 5
    arr(INT(r/3.0):j) = 4
END PROGRAM

--------------------------------------------------------------------------------

(translation_unit
  (program
    (program_statement
      (name))
    (assignment_statement
      (call_expression
        (identifier)
        (argument_list
          (number_literal)))
      (number_literal))
    (assignment_statement
      (call_expression
        (identifier)
        (argument_list
          (extent_specifier)))
      (number_literal))
    (assignment_statement
      (call_expression
        (identifier)
        (argument_list
          (extent_specifier
            (number_literal)
            (number_literal))))
      (number_literal))
    (assignment_statement
      (call_expression
        (identifier)
        (argument_list
          (extent_specifier
            (number_literal)
            (number_literal)
            (number_literal))))
      (number_literal))
    (assignment_statement
      (call_expression
        (identifier)
        (argument_list
          (extent_specifier
            (number_literal))))
      (number_literal))
    (assignment_statement
      (call_expression
        (identifier)
        (argument_list
          (extent_specifier
            (call_expression
              (identifier)
              (argument_list
                (identifier)))
            (math_expression
              (number_literal)
              (identifier))
            (identifier))))
      (number_literal))
    (assignment_statement
      (call_expression
        (identifier)
        (argument_list
          (number_literal)
          (identifier)
          (call_expression
            (identifier)
            (argument_list
              (call_expression
                (identifier)
                (argument_list
                  (identifier)))))))
      (number_literal))
    (assignment_statement
      (call_expression
        (identifier)
        (argument_list
          (extent_specifier
            (call_expression
              (identifier)
              (argument_list
                (math_expression
                  (identifier)
                  (number_literal))))
            (identifier))))
      (number_literal))
    (end_program_statement)))

================================================================================
Pointer Assignment
================================================================================

PROGRAM TEST
    val => x
    val(1) => x
    val%attr => x
END PROGRAM

--------------------------------------------------------------------------------

(translation_unit
  (program
    (program_statement
      (name))
    (pointer_association_statement
      (identifier)
      (identifier))
    (pointer_association_statement
      (call_expression
        (identifier)
        (argument_list
          (number_literal)))
      (identifier))
    (pointer_association_statement
      (derived_type_member_expression
        (identifier)
        (type_member))
      (identifier))
    (end_program_statement)))

================================================================================
Derived Type Member Access
================================================================================

PROGRAM TEST
  val%attr = x
  x = val%attr
  val%attr(1:4) = x
END PROGRAM

--------------------------------------------------------------------------------

(translation_unit
  (program
    (program_statement
      (name))
    (assignment_statement
      (derived_type_member_expression
        (identifier)
        (type_member))
      (identifier))
    (assignment_statement
      (identifier)
      (derived_type_member_expression
        (identifier)
        (type_member)))
    (assignment_statement
      (call_expression
        (derived_type_member_expression
          (identifier)
          (type_member))
        (argument_list
          (extent_specifier
            (number_literal)
            (number_literal))))
      (identifier))
    (end_program_statement)))

================================================================================
Mathematical Expressions
================================================================================

PROGRAM TEST
    val = x + 1
    val = x - 1
    val = x * y
    val = x / y
    val = x**y
    val = -x
    val = +x
    val = r**j / k**(-2) * 7
    val = 14 + (i - j)**3
    val = -1 ** 2
END PROGRAM

--------------------------------------------------------------------------------

(translation_unit
  (program
    (program_statement
      (name))
    (assignment_statement
      (identifier)
      (math_expression
        (identifier)
        (number_literal)))
    (assignment_statement
      (identifier)
      (math_expression
        (identifier)
        (number_literal)))
    (assignment_statement
      (identifier)
      (math_expression
        (identifier)
        (identifier)))
    (assignment_statement
      (identifier)
      (math_expression
        (identifier)
        (identifier)))
    (assignment_statement
      (identifier)
      (math_expression
        (identifier)
        (identifier)))
    (assignment_statement
      (identifier)
      (unary_expression
        (identifier)))
    (assignment_statement
      (identifier)
      (unary_expression
        (identifier)))
    (assignment_statement
      (identifier)
      (math_expression
        (math_expression
          (math_expression
            (identifier)
            (identifier))
          (math_expression
            (identifier)
            (parenthesized_expression
              (unary_expression
                (number_literal)))))
        (number_literal)))
    (assignment_statement
      (identifier)
      (math_expression
        (number_literal)
        (math_expression
          (parenthesized_expression
            (math_expression
              (identifier)
              (identifier)))
          (number_literal))))
    (assignment_statement
      (identifier)
      (unary_expression
        (math_expression
          (number_literal)
          (number_literal))))
    (end_program_statement)))

================================================================================
Logical Expressions
================================================================================

PROGRAM TEST
    val = x < y
    val = x .LT. y
    val = x > y
    val = x .gt. y
    val = x <= y
    val = x .LE. y
    val = x >= y
    val = x .ge. y
    val = x == y
    val = x .EQ. y
    val = x /= y
    val = x .NE. y
    val = x .EQV. y
    val = x .NEQV. y
    val = x .AND. y
    val = x .or. y
    val = .NOT. x
    val = (.NOT. x == y)
    val = ((x > y) .AND. (y <= z)) .eqv. .true.
    val = 1.eq.0
END PROGRAM

--------------------------------------------------------------------------------

(translation_unit
  (program
    (program_statement
      (name))
    (assignment_statement
      left: (identifier)
      right: (relational_expression
        left: (identifier)
        right: (identifier)))
    (assignment_statement
      left: (identifier)
      right: (relational_expression
        left: (identifier)
        right: (identifier)))
    (assignment_statement
      left: (identifier)
      right: (relational_expression
        left: (identifier)
        right: (identifier)))
    (assignment_statement
      left: (identifier)
      right: (relational_expression
        left: (identifier)
        right: (identifier)))
    (assignment_statement
      left: (identifier)
      right: (relational_expression
        left: (identifier)
        right: (identifier)))
    (assignment_statement
      left: (identifier)
      right: (relational_expression
        left: (identifier)
        right: (identifier)))
    (assignment_statement
      left: (identifier)
      right: (relational_expression
        left: (identifier)
        right: (identifier)))
    (assignment_statement
      left: (identifier)
      right: (relational_expression
        left: (identifier)
        right: (identifier)))
    (assignment_statement
      left: (identifier)
      right: (relational_expression
        left: (identifier)
        right: (identifier)))
    (assignment_statement
      left: (identifier)
      right: (relational_expression
        left: (identifier)
        right: (identifier)))
    (assignment_statement
      left: (identifier)
      right: (relational_expression
        left: (identifier)
        right: (identifier)))
    (assignment_statement
      left: (identifier)
      right: (relational_expression
        left: (identifier)
        right: (identifier)))
    (assignment_statement
      left: (identifier)
      right: (logical_expression
        left: (identifier)
        right: (identifier)))
    (assignment_statement
      left: (identifier)
      right: (logical_expression
        left: (identifier)
        right: (identifier)))
    (assignment_statement
      left: (identifier)
      right: (logical_expression
        left: (identifier)
        right: (identifier)))
    (assignment_statement
      left: (identifier)
      right: (logical_expression
        left: (identifier)
        right: (identifier)))
    (assignment_statement
      left: (identifier)
      right: (logical_expression
        argument: (identifier)))
    (assignment_statement
      left: (identifier)
      right: (parenthesized_expression
        (logical_expression
          argument: (relational_expression
            left: (identifier)
            right: (identifier)))))
    (assignment_statement
      left: (identifier)
      right: (logical_expression
        left: (parenthesized_expression
          (logical_expression
            left: (parenthesized_expression
              (relational_expression
                left: (identifier)
                right: (identifier)))
            right: (parenthesized_expression
              (relational_expression
                left: (identifier)
                right: (identifier)))))
        right: (boolean_literal)))
    (assignment_statement
      left: (identifier)
      right: (relational_expression
        left: (number_literal)
        right: (number_literal)))
    (end_program_statement)))

================================================================================
Function and Subroutine Call Expressions
================================================================================

PROGRAM TEST
    nargs = command_argument_count()
    x = SIN(1.0 + i + j/k)
    x = SIN(REAL(j**k, 8) * 100) / 2.0
    CALL get_command_argument(i, arg)
    OPEN(7, FILE="output.txt")
    obj%attr = SIN(rr(1:i))
    name = adjustl(line(i)(1:pos-1)(0))
END PROGRAM

--------------------------------------------------------------------------------
